Изменяет блок опроса

--- a/source/activity-surveys.html
+++ b/source/activity-surveys.html
@@ -37,272 +37,272 @@
 
         <section class="poll poll--poll-list">
           <h2 class="visually-hidden">Опросы</h2>
-          <ul class="poll__list">
-            <li class="poll__item">
+          <div class="poll__list">
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о состоянии инвестиционного и предпринимательского климата в Тульской области для представителей средних предприятий
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--passed">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--passed">
               <p class="poll__text">
                 Опрос о внесение изменение в работу Почты России
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Наложить народное вето на безаппеляционные решения отклонить набравшие необходимое число голосов, общественные инициативы и возобновить процедуру их
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Опрос о мусорной реформе
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о необходимости введения запрета на назначение административного ареста лицам пенсионного возраста
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--passed">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--passed">
               <p class="poll__text">
                 Одобрение инициативы должно зависеть от процента её прочтения
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о состоянии инвестиционного и предпринимательского климата в Тульской области для представителей средних предприятий
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--passed">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--passed">
               <p class="poll__text">
                 Опрос о внесение изменение в работу Почты России
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Наложить народное вето на безаппеляционные решения отклонить, набравшие необходимое число голосов, общественные инициативы и возобновить процедуру их
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о мусорной реформе
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Опрос о необходимости введения запрета на назначение административного ареста лицам пенсионного возраста
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--passed">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--passed">
               <p class="poll__text">
                 Одобрение инициативы должно зависеть от процента её прочтения
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о состоянии инвестиционного и предпринимательского климата в Тульской области для представителей средних предприятий
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Опрос о внесение изменение в работу Почты России
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Наложить народное вето на безаппеляционные решения отклонить, набравшие необходимое число голосов, общественные инициативы и возобновить процедуру их
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о мусорной реформе
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о необходимости введения запрета на назначение административного ареста лицам пенсионного возраста
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о необходимости введения запрета на назначение административного ареста лицам пенсионного возраста
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о состоянии инвестиционного и предпринимательского климата в Тульской области для представителей средних предприятий
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item">
+              </div>
+            </a>
+            <a href="#" class="poll__item">
               <p class="poll__text">
                 Опрос о мусорной реформе
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="poll__item poll__item--accent">
+              </div>
+            </a>
+            <a href="#" class="poll__item poll__item--accent">
               <p class="poll__text">
                 Наложить народное вето на безаппеляционные решения отклонить, набравшие необходимое число голосов, общественные инициативы и возобновить процедуру их
               </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                   <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow"></use>
                   </svg>
-                </a>
-              </li>
-              <li class="poll__item poll__item--accent">
+                </div>
+              </a>
+              <a href="#" class="poll__item poll__item--accent">
                 <p class="poll__text">
                   Одобрение инициативы должно зависеть от процента её прочтения
                 </p>
-                <a href="#" class="poll__link link-arrow link-arrow--small">
+                <div class="poll__link link-arrow link-arrow--small">
                   <span>Перейти к опросу</span>
                   <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow"></use>
                   </svg>
-                </a>
-              </li>
-              <li class="poll__item">
+                </div>
+              </a>
+              <a href="#" class="poll__item">
                 <p class="poll__text">
                   Опрос о внесение изменение в работу Почты России
                 </p>
-                <a href="#" class="poll__link link-arrow link-arrow--small">
+                <div class="poll__link link-arrow link-arrow--small">
                   <span>Перейти к опросу</span>
                   <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#icon-arrow"></use>
                   </svg>
-                </a>
-              </li>
-              <li class="poll__item poll__item--passed">
+                </div>
+              </a>
+              <a href="#" class="poll__item poll__item--passed">
                 <p class="poll__text">
                   Одобрение инициативы должно зависеть от процента её прочтения
                 </p>
-              <a href="#" class="poll__link link-arrow link-arrow--small">
+              <div class="poll__link link-arrow link-arrow--small">
                 <span>Перейти к опросу</span>
                 <svg width="33" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-          </ul>
+              </div>
+            </a>
+          </div>
         </section>
 
         <button class="list-btn button button--light-blue" type="button">Показать ещё</button>
