add header on main page for print

--- a/source/main-page.html
+++ b/source/main-page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <include src="source/components/head.html"></include>
 
-  <body class="page-body">
+  <body class="page-body page-main">
     <include src="source/components/special-popup.html"></include>
 
     <include src="source/components/header.html"></include>
