--- a/source/comment-popup.html
+++ b/source/comment-popup.html
@@ -299,7 +299,7 @@
                     <td>Рыбным текстом</td>
                     <td>Пока финальный текст еще не создан</td>
                     <td>Рыбный текст также известен</td>
-                    <td class="table-fixed__long-name">Рыбный текст</td>
+                    <td>Рыбный текст</td>
                     <td>16 005 ₽</td>
                   </tr>
                   <tr>
@@ -444,7 +444,7 @@
           </div>
         </div>
       </div>
-       
+
       <div class="comment-popup comment-popup--add js-comment-popup--table popup js-popup">
         <div class="comment-popup__container popup__container">
           <div class="popup__overlay js-popup__overlay"></div>
@@ -495,7 +495,7 @@
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
                       <td>Рыбный текст также известен</td>
-                      <td class="table-fixed__long-name">Рыбный текст</td>
+                      <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
                     </tr>
                     <tr>
