--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -373,11 +373,14 @@
                   </svg>
                 </button>
                 <div class="table-fixed">
-                  <table>
+                  <table style="min-width: 1700px;">
                     <tr>
                       <th>Заголовок</th>
                       <th>Рыбным текстом</th>
                       <th>Называется текст</th>
+                      <th>Служащий для временного наполнения макета</th>
+                      <th>В публикациях или производстве веб-сайтов</th>
+                      <th>Заголовок</th>
                       <th>Служащий для временного наполнения макета</th>
                       <th>В публикациях или производстве веб-сайтов</th>
                       <th>Заголовок</th>
@@ -389,6 +392,9 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>2</td>
@@ -397,6 +403,9 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>3</td>
@@ -405,6 +414,9 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>4</td>
@@ -413,6 +425,9 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>5</td>
@@ -421,11 +436,17 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>6</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
@@ -437,6 +458,9 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>8</td>
@@ -445,6 +469,9 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>9</td>
@@ -453,6 +480,9 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>10</td>
@@ -461,6 +491,9 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>11</td>
@@ -469,11 +502,17 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>12</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
@@ -485,6 +524,9 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>14</td>
@@ -493,6 +535,9 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>15</td>
@@ -501,6 +546,9 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>16</td>
@@ -509,6 +557,9 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>17</td>
@@ -517,6 +568,9 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>18</td>
@@ -525,6 +579,9 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>19</td>
@@ -533,11 +590,17 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>20</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст также известен</td>
+                      <td>Рыбный текст</td>
+                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
