--- a/source/discussion-item.html
+++ b/source/discussion-item.html
@@ -373,14 +373,11 @@
                   </svg>
                 </button>
                 <div class="table-fixed">
-                  <table style="min-width: 1700px;">
+                  <table>
                     <tr>
                       <th>Заголовок</th>
                       <th>Рыбным текстом</th>
                       <th>Называется текст</th>
-                      <th>Служащий для временного наполнения макета</th>
-                      <th>В публикациях или производстве веб-сайтов</th>
-                      <th>Заголовок</th>
                       <th>Служащий для временного наполнения макета</th>
                       <th>В публикациях или производстве веб-сайтов</th>
                       <th>Заголовок</th>
@@ -392,9 +389,6 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>2</td>
@@ -403,9 +397,6 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>3</td>
@@ -414,9 +405,6 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>4</td>
@@ -425,9 +413,6 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>5</td>
@@ -436,17 +421,11 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>6</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
@@ -458,9 +437,6 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>8</td>
@@ -469,9 +445,6 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>9</td>
@@ -480,9 +453,6 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>10</td>
@@ -491,9 +461,6 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>11</td>
@@ -502,17 +469,11 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>12</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
@@ -524,9 +485,6 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>14</td>
@@ -535,9 +493,6 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>15</td>
@@ -546,9 +501,6 @@
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>16</td>
@@ -557,9 +509,6 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>17</td>
@@ -568,9 +517,6 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>18</td>
@@ -579,9 +525,6 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>19</td>
@@ -590,17 +533,11 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                     </tr>
                     <tr>
                       <td>20</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
-                      <td>Рыбный текст также известен</td>
-                      <td>Рыбный текст</td>
-                      <td>100 000 ₽</td>
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
