Удаляет скролл на таблице

--- a/source/comment-popup.html
+++ b/source/comment-popup.html
@@ -471,6 +471,12 @@
                       <th>Служащий для временного наполнения макета</th>
                       <th>В публикациях или производстве веб-сайтов</th>
                       <th>Заголовок</th>
+                      <th>Служащий для временного наполнения макета</th>
+                      <th>В публикациях или производстве веб-сайтов</th>
+                      <th>Заголовок</th>
+                      <th>Служащий для временного наполнения макета</th>
+                      <th>В публикациях или производстве веб-сайтов</th>
+                      <th>Заголовок</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -478,6 +484,12 @@
                       <td>1</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
@@ -489,6 +501,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>3</td>
@@ -497,6 +515,12 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>4</td>
@@ -505,6 +529,12 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>5</td>
@@ -513,6 +543,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>6</td>
@@ -521,11 +557,23 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>7</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
@@ -537,6 +585,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>9</td>
@@ -545,6 +599,12 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>10</td>
@@ -553,6 +613,12 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>11</td>
@@ -561,6 +627,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>12</td>
@@ -569,11 +641,23 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>13</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
@@ -585,11 +669,23 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>15</td>
                       <td>Рыбным текстом</td>
                       <td>Пока финальный текст еще не создан</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                       <td>Рыбный текст</td>
                       <td>Рыбный текст</td>
                       <td>1 220 096 ₽ </td>
@@ -601,6 +697,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>15,5 $</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>17</td>
@@ -609,6 +711,12 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>16 005 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>18</td>
@@ -617,6 +725,12 @@
                       <td>Рыбный текст</td>
                       <td>Как правило их</td>
                       <td>22 500 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>19</td>
@@ -625,6 +739,12 @@
                       <td>Рыбный текст</td>
                       <td>Уже в 16-том веке</td>
                       <td>12 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                     <tr>
                       <td>20</td>
@@ -633,6 +753,12 @@
                       <td>Рыбный текст также известен</td>
                       <td>Рыбный текст</td>
                       <td>100 000 ₽</td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
+                      <td>Рыбный текст</td>
+                      <td>Рыбный текст</td>
+                      <td>1 220 096 ₽ </td>
                     </tr>
                   </tbody>
                 </table>
